Code quality: fixed instantiating Byte.